--- a/src/components/Course/CoursesList/LessonsList.module.scss
+++ b/src/components/Course/CoursesList/LessonsList.module.scss
@@ -16,6 +16,7 @@
     max-inline-size: var(--spacing-mega) !important;
   }
   @include breakpoints.smallerThanTablet {
+    min-width: calc(9 * var(--spacing-mega)) !important;
     max-inline-size: calc(10 * var(--spacing-mega));
   }
   // image container
